--- a/index.html
+++ b/index.html
@@ -34,7 +34,25 @@
             <li><a href="#">catogory 3</a></li>
             <li><a href="#">catogory 4</a></li>
         </ul>
-
      </div>
+     <div>
+        <form class="my-form">
+            <div class="form-group">
+                <label>Name: </label>
+                <input type="text" name="name" >
+            </div>
+            <div class="form-group">
+                <label>Email: </label>
+                <input type="text" name="email" >
+            </div>
+            <div class="form-group">
+                <label>Message: </label>
+                <textarea name="message" ></textarea>
+            </div>
+            <input class="button" type="submit" value="submit"> 
+
+        </form>
+     </div>
+     <div style="margin-top: 500px;"></div>
 </body>
 </html>
