--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h1>Hello World</h1>
         <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea fugit ratione ullam, eius molestiae consequatur sunt pariatur possimus saepe doloremque deserunt labore quia libero, illo soluta earum ex harum Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam doloremque vitae dolore saepe! Facere voluptatibus beatae atque necessitatibus laboriosam nobis quasi voluptatem quia a porro quidem perspiciatis mollitia, non debitis?
+            <a class="button" href="">Read More</a>
         </p>
       </div>
       <div class="container">
@@ -39,11 +40,11 @@
         <form class="my-form">
             <div class="form-group">
                 <label>Name: </label>
-                <input type="text" name="name" >
+                <input type="text" name="Name" >
             </div>
             <div class="form-group">
                 <label>Email: </label>
-                <input type="text" name="email" >
+                <input type="text" name="Email" >
             </div>
             <div class="form-group">
                 <label>Message: </label>
@@ -52,7 +53,55 @@
             <input class="button" type="submit" value="submit"> 
 
         </form>
+        <div class="block">
+            <h3>Heading</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo ex impedit necessitatibus ipsa? Quia dicta atque quaerat veniam aspernatur enim quisquam mollitia voluptatem, repellat nihil, aperiam cumque, dolor voluptate neque!
+            </p>
+        </div>
+        <div class="block">
+            <h3>Heading</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo ex impedit necessitatibus ipsa? Quia dicta atque quaerat veniam aspernatur enim quisquam mollitia voluptatem, repellat nihil, aperiam cumque, dolor voluptate neque!
+            </p>
+        </div>
+        <div class="block">
+            <h3>Heading</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo ex impedit necessitatibus ipsa? Quia dicta atque quaerat veniam aspernatur enim quisquam mollitia voluptatem, repellat nihil, aperiam cumque, dolor voluptate neque!
+            </p>
+        </div>
+        <div class="clr"></div>
+        <div id="main-block">
+            <h3>Heading</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo ex impedit necessitatibus ipsa? Quia dicta atque quaerat veniam aspernatur enim quisquam mollitia voluptatem, repellat nihil, aperiam cumque, dolor voluptate neque!
+            </p>
+        </div>
+        <div id="sidebar">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo ex impedit necessitatibus ipsa? Quia dicta atque quaerat veniam aspernatur enim quisquam mollitia voluptatem, repellat nihil, aperiam cumque, dolor voluptate neque!
+            </p>
+        </div>
+        <div class="clr"></div>
+
+        <div class="p-box">
+            <h1>Hello</h1>
+            <h2>Goodbye</h2>
+        </div>
+        <ul class="my-list">
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+        </ul>
      </div>
+      
+     <a class="fix-me button" href="">Hello</a>
+
      <div style="margin-top: 500px;"></div>
 </body>
 </html>
